fixed github action #3

--- a/.github/workflows/firstapp-wildfly-deploy.yaml
+++ b/.github/workflows/firstapp-wildfly-deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Build with maven
         id: mvn_build
         run: |
-          cd JavaEE/firstapp
+          cd firstapp
           mvn --batch-mode clean install wildfly:deploy -Dwildfly.hostname=$ {{ secrets.WILDFLY_HOST }} \
           -Dwildfly.username=${{ secrets.WILDFLY_ADMIN_LOGIN }} \
           -Dwildfly.password=${{ secrets.WILDFLY_ADMIN_PASSWORD }}
