--- a/.github/workflows/firstapp-wildfly-deploy.yaml
+++ b/.github/workflows/firstapp-wildfly-deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         id: mvn_build
         run: |
           cd firstapp
-          mvn --batch-mode --update-snapshots wildfly:deploy \
+          mvn --batch-mode --update-snapshots wildfly:undeploy wildfly:deploy \
           -Dwildfly.hostname=${{ secrets.WILDFLY_HOST }} \
           -Dwildfly.username=${{ secrets.WILDFLY_ADMIN_LOGIN }} \
           -Dwildfly.password=${{ secrets.WILDFLY_ADMIN_PASSWORD }}
