--- a/.github/workflows/firstapp-wildfly-deploy.yaml
+++ b/.github/workflows/firstapp-wildfly-deploy.yaml
@@ -22,3 +22,12 @@ jobs:
           -Dwildfly.hostname=${{ secrets.WILDFLY_HOST }} \
           -Dwildfly.username=${{ secrets.WILDFLY_ADMIN_LOGIN }} \
           -Dwildfly.password=${{ secrets.WILDFLY_ADMIN_PASSWORD }}
+
+      - name: Build with maven first-jsp-app
+          id: mvn_build_first
+          run: |
+            cd first-jsp-app
+            mvn --batch-mode --update-snapshots wildfly:undeploy wildfly:deploy \
+            -Dwildfly.hostname=${{ secrets.WILDFLY_HOST }} \
+            -Dwildfly.username=${{ secrets.WILDFLY_ADMIN_LOGIN }} \
+            -Dwildfly.password=${{ secrets.WILDFLY_ADMIN_PASSWORD }}
